# ARL_Project

./: .gitignore  Dockerfile  README.md  build_and_create_container.sh  build_and_create_container_foxy.sh  build_image.sh  create_container.sh  foxy.dockerfile
src/: start.sh
src/tello_arl/: package.xml  setup.py
src/tello_arl/tello_arl/: main.py
src_files/: .bash_history  arl_project.py  aruco_node.py  commands  f2.world  simple_launch.py  start.sh
src_files/.gazebo/models/Ar_tags/meshes/: Ar_tag.dae
src_files/src/ros2_aruco/ros2_aruco/ros2_aruco/: aruco_node.py  aruco_node_find_aruco_type.py
src_files/src/tello_arl/: package.xml  setup.cfg  setup.py
src_files/src/tello_arl/launch/: control_drone.launch.py  simulation_1_pid.launch.py  simulation_1drone.launch.py  simulation_2drone.launch.py  start_control_drone.launch.py
src_files/src/tello_arl/tello_arl/: __init__ backup.py  __init__.py  main.py  tello_ws.code-workspace  visualization.py
src_files/src/tello_arl/visualization/: Default.perspective  config.rviz
src_files/src/tello_ros/tello_description_arl/: package.xml
src_files/src/tello_ros/tello_description_arl/urdf/: tello.xml
src_files/src/tello_ros/tello_gazebo/launch/: arl_project.py
src_files/src/tello_ros/tello_gazebo/worlds/: empty.world  f2.world
src_files/tello_arl/: package.xml  setup.py
src_files/tello_arl/launch/: tello_arl.launch.py
src_files/tello_arl/tello_arl/: __init__.py
src_files/tello_description_arl/: CMakeLists.txt
src_files/tello_description_arl/urdf/: tello.xml
