<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tello_arl</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="czechjakub@icloud.com">root</maintainer>
  <license>TODO: License declaration</license>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>std_msgs</depend>

  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rqt</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tello_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>tello_driver</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
